--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT=3000
 SESSION_SECRET='super session secret'
+MONGODB_URI=mongodb+srv://raketentrat0r:102030mdb@cluster0.tz3zj.mongodb.net/tumblr-lab?retryWrites=true&w=majority
